# Sel4CapstoneProject

./: CMakeLists.txt  settings.cmake
apps/hello-world/: CMakeLists.txt  hello-world.camkes
apps/hello-world/components/HelloWorld/src/: hello-world.c
apps/simple-tls/: CMakeLists.txt  simple-tls.camkes
apps/simple-tls/components/SimpleTLS/src/: crypto-test.c  parser.c  processor.c  server.c  tls-test.c  tls.c  tls.h
